adding image of sketch for settings page layouts

--- a/gymsales_settings_page.html
+++ b/gymsales_settings_page.html
@@ -67,7 +67,9 @@
 
 					<p>First up, I did some research to see how well known sites with complex settings pages solve this problem. I looked at Facebook, Slack and Google Inbox. You can see the screenshots <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.dropbox.com/sh/9dqjnvq03xwpqvi/AABZ_QtGZD9gz4nbVl8HvzR2a?dl=0">here</a>.</p>
 					<p>The common layouts were flat, tabbed and left hand side menu.</p>
-					<img class="image--medium" src="/images/settings_page_layouts.png">					
+					<img class="image--medium image--with-caption" src="/images/settings_page_layouts.jpg">
+					<div class="image-caption">My sketch documenting the basic layouts in common use</div>
+
 			</div>
 
 			<div class="sub-section__content">
