anchor links and navigation between case studies

--- a/gymsales_settings_page.html
+++ b/gymsales_settings_page.html
@@ -107,6 +107,9 @@
 					<p>Soon after launching the new design, we needed to add another section to the settings page. This time, the development team needed no input from me, and could just follow the new layout pattern.</p>
 					<p>We now had a settings page that was much easier to maintain, add to and navigate.</p>
 			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+				<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#DesignOfASettingsPage">Back to ‘My work’</a>
+			</div>
 		</div>
 
 		
