--- a/seek_credit_card_form_redesign.html
+++ b/seek_credit_card_form_redesign.html
@@ -176,6 +176,10 @@
 					<p>The number of card transactions increased by a factor of six, meaning that were sending out a lot less invoices.</p>
 					<p>Most importantly, our upfront cash flow increased by a six-figure sum and the debt collection agency we used voiced concern over loss of business :)</p>
 			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+				<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#CreditCardPaymentForm">Back to ‘My work’</a>
+				<a class="link link--on-light-bg link--inline" href="usability_testing_with_kolektiv.html">Next case study</a>
+			</div>
 		</div>
 
 		
