--- a/seek_design_sprint.html
+++ b/seek_design_sprint.html
@@ -96,6 +96,10 @@
 
 					<p>Personally, I gained a lot from the sprint, as did most of those who participated. Many of the techniques we used during the week have become part of my personal design process, and I have been able to run simplified design sprints for a couple of my freelance clients.</p>
 			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+				<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#DesignSprintForJoraLocal">Back to ‘My work’</a>
+				<a class="link link--on-light-bg link--inline" href="design_workshop_facilitation_with_rubicon.html">Next case study</a>
+			</div>
 		</div>
 
 		
