--- a/usability_testing_with_kolektiv.html
+++ b/usability_testing_with_kolektiv.html
@@ -79,6 +79,10 @@
 					<p>There was complete buy-in into the findings of the usability testing from everyone, right up to the CEO.</p>
 					<p>As a result, Kolektiv have started making changes to address some of the findings of the testing. More importantly, they are now committed to running usability testing as part of their product development process.</p>
 			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+				<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#CoachingAnOrgInUsabilityTesting">Back to ‘My work’</a>
+				<a class="link link--on-light-bg link--inline" href="gymsales_settings_page.html">Next case study</a>
+			</div>
 		</div>
 
 		
