--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<!-- GYMSALES REGISTRATION APP -->
-		<div class="section section--medium">
+		<div id="VisitorRegistrationApp" class="section section--medium">
 
 			<div class="my-work-item my-work-item--with-ipad">
 
@@ -52,7 +52,7 @@
 		</div>
 
 		<!-- DESIGN SPRINT -->
-		<div class="section section--light">
+		<div id="DesignSprintForJoraLocal" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design sprint for JoraLocal</h2>
 
@@ -70,7 +70,7 @@
 		<!-- RUBICON WORKSHOP -->
 		<div class="section">
 
-			<div class="my-work-item my-work-item_full-width-image--rubicon">
+			<div id="WorkshopFacilitationAndWireframeDesign" class="my-work-item my-work-item_full-width-image--rubicon">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
 					<p class="text--on-dark-bg">I ran a two day design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
@@ -81,7 +81,7 @@
 		</div>
 
 		<!-- CREDIT CARD PAYMENT -->
-		<div class="section section--light">
+		<div id="CreditCardPaymentForm" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Credit card payment form</h2>
 
@@ -115,7 +115,7 @@
 		<!-- KOLEKTIV.BA USABILITY TESTING -->
 		<div class="section">
 
-			<div class="my-work-item my-work-item_full-width-image--kolektiv">
+			<div id="CoachingAnOrgInUsabilityTesting" class="my-work-item my-work-item_full-width-image--kolektiv">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
 					<p class="text--on-dark-bg">I worked with an organisations in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
@@ -126,7 +126,7 @@
 		</div>
 		
 		<!-- GYM SALES SETTINGS -->
-		<div class="section section--light section--on-top">
+		<div id="DesignOfASettingsPage" class="section section--light section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design of a settings page</h2>
 
