restyled case study navigation

--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -101,15 +101,17 @@
 
 
 			</div>
-			<div class="sub-section__content">
+			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">The outcome</h2>
 
 					<p>The app was finished in May 2016 and has been rolled out to over a thousand gyms around the USA.</p>
 					<p>A further sign of success was that the major client, Snap Fitness, requested for the app to be extended to cover their entire member signup process.</p>
 			</div>
-			<div class="sub-section__content sub-section--last-in-section">
-				<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#VisitorRegistrationApp">Back to ‘My work’</a>
-				<a class="link link--on-light-bg link--inline" href="seek_design_sprint.html">Next case study</a>
+			<div class="section section--medium section--nav">
+				<div class="sub-section__content sub-section--last-in-section">
+					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#VisitorRegistrationApp">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--inline" href="seek_design_sprint.html">Next case study</a>
+				</div>
 			</div>
 		</div>
 
