fixed case study nav for small screens

--- a/seek_design_sprint.html
+++ b/seek_design_sprint.html
@@ -98,7 +98,7 @@
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#DesignSprintForJoraLocal">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#DesignSprintForJoraLocal">Back to ‘My work’</a>
 					<a class="link link--on-light-bg link--inline" href="design_workshop_facilitation_with_rubicon.html">Next case study</a>
 				</div>
 			</div>
