--- a/design_workshop_facilitation_with_rubicon.html
+++ b/design_workshop_facilitation_with_rubicon.html
@@ -101,7 +101,7 @@
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#WorkshopFacilitationAndWireframeDesign">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#WorkshopFacilitationAndWireframeDesign">Back to ‘My work’</a>
 					<a class="link link--on-light-bg link--inline" href="seek_credit_card_form_redesign.html">Next case study</a>
 				</div>
 			</div>
