--- a/gymsales_settings_page.html
+++ b/gymsales_settings_page.html
@@ -109,7 +109,7 @@
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#DesignOfASettingsPage">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#DesignOfASettingsPage">Back to ‘My work’</a>
 				</div>
 			</div>
 		</div>
