--- a/seek_credit_card_form_redesign.html
+++ b/seek_credit_card_form_redesign.html
@@ -178,7 +178,7 @@
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#CreditCardPaymentForm">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#CreditCardPaymentForm">Back to ‘My work’</a>
 					<a class="link link--on-light-bg link--inline" href="usability_testing_with_kolektiv.html">Next case study</a>
 				</div>
 			</div>
