--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -109,7 +109,7 @@
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
-					<a class="link link--on-light-bg link--inline link--case-study-nav" href="vedrans_design_work.html#VisitorRegistrationApp">Back to ‘My work’</a>
+					<a class="link link--on-light-bg link--case-study-nav" href="vedrans_design_work.html#VisitorRegistrationApp">Back to ‘My work’</a>
 					<a class="link link--on-light-bg link--inline" href="seek_design_sprint.html">Next case study</a>
 				</div>
 			</div>
