copy review and changes

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -38,19 +38,26 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">A turning point</h2>
 
-					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use cancer diagnostic instruments and helping them improve their processes.</p>
+					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use cancer diagnostic instruments, how our engineers service those instruments and helping both groups improve their processes.</p>
 					
 					<p>That was in 2007. That passion for observing how people interact with products and using those observations to design better experiences, lives on in me and is the key reason why I love what I do.</p>
 
 			</div>
-			<div class="sub-section__content sub-section--last-in-section">
+			<div class="sub-section__content">
 					<h2 class="h2-heading">My focus today</h2>
 
 					<p>Evolution of my design process and the process of the teams I work with, is something I am very interested in. I am focused on experimenting with, and continuously improving these processes.</p>
 
 					<p>I am a big advocate for use of modern design tools, colaborative design practices and early and continued involvement of users in the design process.</p>
 
-					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at<a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/presentations"> other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@ThatBaldUXGuy">write</a> about design.</p>
+					<p>I love pushing pixels, it suits my detail oriented side. I can lose myself in Sketch for hours, but I never lose sight of the bigger picture, the audience I’m designing for and the business whose objectives I’m helping meet.</p>
+
+					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/presentations">other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@ThatBaldUXGuy">write</a> about design.</p>
+			</div>
+			<div class="sub-section__content sub-section--last-in-section">
+					<h2 class="h2-heading">About this site</h2>
+
+					<p>This site was designed, and entirely coded by me. No templates and no Bootstrap. You can see the source code at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://github.com/ThatBaldUXGuy/ThatBaldUXGuy.github.io">my GitHub account</a>.</p>
 			</div>
 		</div>
 		<img class="image--full-width" src="/images/family.JPG" alt="Vedran's family"/>
