--- a/design_workshop_facilitation_with_rubicon.html
+++ b/design_workshop_facilitation_with_rubicon.html
@@ -37,7 +37,7 @@
 					<h2 class="h2-heading">A lucky coincidence</h2>
 
 					<p>It just happened that I had kickstarted <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.meetup.com/Sarajevo-UX-Design/">the first UX meetup group in Sarajevo</a>, and was delivering my <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/using-design-sprint-to-accelerate-innovation-part-i-of-ii-f643ad42cf60#.buw82p9vg">talk on design sprints</a> a month before Rubicon were to begin working with their client.</p>
-					<p>After the presentation, I was approached by Rubicon's CEO, and we decided to try the design sprint process with their client.</p>
+					<p>After the presentation, I was approached by Rubicon’s CEO, and we decided to try the design sprint process with their client.</p>
 					
 			</div>
 			<div class="sub-section__content">
@@ -67,7 +67,7 @@
 					<p>Empathy mapping was particularly useful as it allowed the team to put themselves in the shoes of the end users. Later on, as we started getting into the design, we often reflected on what we discovered during empathy mapping.</p>
 					
 					<h3 class="h3-heading">Day two</h3>
-					<p>Once we had a good understanding of the existing product and it’s audience, we spent the second day designing the product together. We used a couple of collaborative design techniques<a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/two-types-of-collaborative-design-sessions-46c6d7090b70#.vchxvmfst"> I wrote about before</a>, as well as a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/4-simple-steps-to-improve-your-ui-sketches-4ad2f1433373#.fecl4kbil">sketching technique</a> I had used a number of times.</p>
+					<p>Once we had a good understanding of the existing product and its audience, we spent the second day designing the product together. We used a couple of collaborative design techniques<a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/two-types-of-collaborative-design-sessions-46c6d7090b70#.vchxvmfst"> I wrote about before</a>, as well as a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/4-simple-steps-to-improve-your-ui-sketches-4ad2f1433373#.fecl4kbil">sketching technique</a> I had used a number of times.</p>
 
 					<img class="image--medium image--with-caption" src="/images/rubicon_design_sketching.jpg">
 					<div class="image-caption">The Rubicon team and the clients sketching together</div>
@@ -89,7 +89,7 @@
 
 					<img class="image--medium" src="/images/rubicon_invision_prototype_sample.png">
 
-					<p>The visual design for this product was handed over to a designer in The Netherlands.</p>
+					<p>The visual design for this product was handed over to a designer in The Netherlands and is not shown here.</p>
 			</div>
 			
 			<div class="sub-section__content sub-section--last-in-section">
