--- a/gymsales_settings_page.html
+++ b/gymsales_settings_page.html
@@ -32,7 +32,7 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">The challenge</h2>
 
-					<p>Re-structure the current settings page to allow more intuitive discovery of settings items and to allow for the page to grow – in other words, allow for more setting sections to be added.</p>
+					<p>Restructure the current settings page to allow more intuitive discovery of settings items and to allow for the page to grow – in other words, allow for more setting sections to be added.</p>
 
 			</div>
 			<div class="sub-section__content">
@@ -41,7 +41,7 @@
 					<p>The existing page had a number of problems. Here are the three key problems I wanted to address.</p>
 
 					<h3 class="h3-heading">Visual noise</h3>
-					<p>Unnecessary UI elements create visual noise and distract the user from completing their task</p>
+					<p>Unnecessary UI elements create visual noise and distract the user from completing their task.</p>
 
 					<img class="image--medium" src="/images/settings_page_problems1.png">
 
@@ -54,9 +54,9 @@
 					<p>The forms used in the settings page needed a lot of work.</p>
 					<img class="image--medium" src="/images/settings_page_problems2.png">
 					<ul class="list">
-						<li class="list__item">Two column layour requires the user’s eye to zig-zag through the form, which is harder than scanning straight down the page.</li>
-						<li class="list__item">Labels to the left of the field are generally understood to perform worse than labels on top of fields</li>
-						<li class="list__item">Left justified labels, combined with a two column layout, cause the labels to be closer to the fields they don’refer to.</li>
+						<li class="list__item">Two column layout requires the user’s eye to zig-zag through the form, which is harder than scanning straight down the page.</li>
+						<li class="list__item">Labels to the left of the field are generally understood to perform worse than labels on top of fields.</li>
+						<li class="list__item">Left justified labels, combined with a two column layout, cause the labels to be closer to the fields they are not related to.</li>
 					</ul>
 
 					
