--- a/seek_credit_card_form_redesign.html
+++ b/seek_credit_card_form_redesign.html
@@ -40,7 +40,7 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Current state</h2>
 
-					<p>The existing online payment form was archaic to say the least. A form that looks this falls short in the task of instilling confidence.</p>
+					<p>The existing online payment form was archaic to say the least. When you ask people to hand over their financial details online, you have to instil confidence. A form that looks like this falls short in the task of instilling confidence </p>
 
 					<img class="image--medium image--with-caption" src="/images/seek_existing_credit_card_form.png">
 					<div class="image-caption">The existing card form left a lot of space for improvement</div>
@@ -65,11 +65,11 @@
 					<h3 class="h3-heading">Do your research</h3>
 
 					<p>I looked at the ways different sites handled input masking, card type selection, saving of card details and help for the security code.</p>
-					<p>I collected a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.dropbox.com/sh/p4jll0acqhczc3d/AABsRBC8H9wK0r0lJ7tsJy5ya?dl=0">folder</a> full of examples I liked, and used some of these as inspiration for my designs.</p>
+					<p>I collected a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.dropbox.com/sh/p4jll0acqhczc3d/AABsRBC8H9wK0r0lJ7tsJy5ya?dl=0">folder</a> of examples I liked, and used some of these as inspiration for my designs.</p>
 
 					<h3 class="h3-heading">Know your audience</h3>
 
-					<p>There were two innovative card form designs that I really like, but chose not to use as they don’t fit with our design philosophy or our audience.</p>
+					<p>There were two innovative card form designs that I really liked, but chose not to use as they don’t fit with our design philosophy or our audience.</p>
 
 					<p>The first is the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://bradfrost.com/blog/post/single-field-credit-card-input-pattern/">single field card form</a>, popularised by Brad Frost.</p>
 
@@ -84,7 +84,7 @@
 
 					<img class="image--medium" src="/images/seek_skeuocard_visa.png">
 
-					<p>However, this wasn't enough of a reason to depart from a tried and tested way of collecting card information. In addition, the style we have been evolving at SEEK leans away from skeumorphism in favour of near-flat design.</p>
+					<p>However, this wasn't enough of a reason to depart from a tried and tested way of collecting card information. In addition, the style we have been evolving at SEEK leans away from skeumorphism in favour of near flat design.</p>
 			</div>
 
 			<div class="sub-section__content">
@@ -97,7 +97,7 @@
 					<h2 class="h2-heading">Refining each form detail</h2>
 
 					<h3 class="h3-heading">Payment options</h3>
-					<p>The first step in nudging more people to pay by card, was to make the ‘Pay via credit card’ option more prominent</p>
+					<p>The first step in nudging more people to pay by card, was to make the ‘Pay via credit card’ option more prominent.</p>
 					<p>The current design had the two options presented with equal visual weight.</p>
 
 					<img class="image--medium image--with-caption" src="/images/seek_card_presentation_of_options.png">
@@ -136,7 +136,7 @@
 					
 					<img class="image--medium" src="/images/seek_card_store_details.png">
 
-					<p>Let’s break down this copy</p>
+					<p>Let’s break down this copy.</p>
 					<ul class="list">
 						<li class="list__item">‘Securely’ reasures the user that this is a secure payment form.</li>
 						<li class="list__item">‘check out faster next time' sells the benefit of saving card details.</li>
@@ -158,9 +158,9 @@
 					
 					<h3 class="h3-heading">Usability testing findings</h3>
 
-					<p>We found that none of participants attempted clicking on the card logos, meaning they were not misunderstood for interactive elements. A couple of participants commented on how useful it was to get the confirmation that your card type was recognised.</p>
+					<p>We found that none of participants attempted clicking on the card logos, meaning they were not misunderstood for interactive elements. A couple of participants commented on how useful it was to get the confirmation that your card type was recognised, once they started typing the card number.</p>
 					<p>The input masking for the expiry date worked without a hitch. Typing was evidently a natural way for people to enter dates.</p>
-					<p>Half of the participants expressed hesitation with saving their card information in general, not just on our site. Of those, most commented that our explanation made it clear why we gave that option and that it put them more at ease about doing so.	</p>
+					<p>Half of the participants expressed hesitation with saving their card information in general, not just on our site. However, they commented that our explanation made it clear why we gave that option and that it put them more at ease about doing so.	</p>
 
 			</div>
 
@@ -173,8 +173,8 @@
 					<h2 class="h2-heading">The outcome</h2>
 
 					<p>After the first six months of the new form going live, the percentage of payments being completed by credit card (instead of invoice) jumped from 30% to 74%.</p>
-					<p>The number of card transactions increased by a factor of six, meaning that were sending out a lot less invoices.</p>
-					<p>Most importantly, our upfront cash flow increased by a six-figure sum and the debt collection agency we used voiced concern over loss of business :)</p>
+					<p>The number of card transactions increased by a factor of six, meaning that we were sending out a lot less invoices.</p>
+					<p>Most importantly, our upfront cash flow increased by a six figure sum and the debt collection agency we used reported a reduction in business from SEEK.</p>
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
