--- a/seek_design_sprint.html
+++ b/seek_design_sprint.html
@@ -24,7 +24,7 @@
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Design sprint for JoraLocal</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.seek.com.au/">SEEK</a> is the largest online employment marketplace in Australia.</p>
-					<p>Recognising that the competition in the market for hospitality and retail staff was heating up, we decided to design and quickly validate our own product to compete directly in this space.</p>
+					<p>Recognising that the competition in the hospitality and retail  job ad market was heating up, we decided to design and quickly validate our own product to compete directly in this space.</p>
 			</div>
 		</div>
 
@@ -33,23 +33,23 @@
 					<h2 class="h2-heading">The process</h2>
 
 					<p>I've previously written extensively about our design sprint process, so if you want to see more details including some tips on how to run a design sprint, check out <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/using-design-sprint-to-accelerate-innovation-part-i-of-ii-f643ad42cf60#.8f4gtb119">my post on Medim</a>.</p>
-					<p>Our process heavily borrowed from Google’s design sprint process, but we did make some key modifications, which I cover in the article above. So here is the design process in a nutshell.</p>
+					<p>Our process heavily borrowed from Google’s design sprint process, but we did make some key modifications, which I cover in the article above. So here is Our process in a nutshell.</p>
 
 					<h3 class="h3-heading">Day 1 – Unpack and immerse</h3>
-					<p>The first day was spent ‘unpacking’ all the information we knew about our target audience. The stragegy team shared their knowledge gathered through Jobs To Be Done reseaerch. We also had representatives form customer support and sales share their kowledge, since they spend most of time with customers.</p>
+					<p>The first day was spent ‘unpacking’ all the information we knew about our target audience. The stragegy team shared their knowledge gathered through Jobs To Be Done research. We had representatives form customer support and sales share their kowledge, since they spend most of their time with customers.</p>
 					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_unpack.jpg">
 					<div class="image-caption">The team paying close attention to research findings</div>
-					<p>Us designers chipped in with our insights gathered through extensive user research conducted over the past couple of years.</p>
+					<p>Us designers contributed our insights gathered through extensive user research conducted over the past couple of years.</p>
 					<p>At the end of the day we had a lot of information covering the walls of our design room which needed to be sythesised into something useful.</p>
 					<h3 class="h3-heading">Day 2 – Build empathy</h3>
 					<p>We took the information we shared on day 1, and set to work building empathy maps and customer journey maps. This would form the foundation of insights we would use to decide which opportunities to focus our attention on during the ideation phase.</p>
 					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_empathy_map.jpg">
 					<div class="image-caption">One of the empathy maps we built</div>
-					<h3 class="h3-heading">Day 3 & 4– Ideate and test</h3>
+					<h3 class="h3-heading">Day 3 & 4 – Ideate and test</h3>
 					<p>In order to design a solution for this target segment, we had to priritise the opportunities we identified through empathy and customer journey maps.</p>
 					<p>Once we agreed on our priorities, the team set out to design potential solutions, using the <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/two-types-of-collaborative-design-sessions-46c6d7090b70#.q12go7h1x">design studio method</a>.</p>
 					<img class="image--medium" src="/images/seek_desing_sprint_sketch.jpeg">
-					<p>However, we had to work quickly – during each of the two ideation days, we also had real users coming in during the afternoon to test our designs, using paper prototypes.</p>
+					<p>However, we had to work quickly – during each of the two ideation days, we had real users coming in during the afternoon to test our designs, using paper prototypes.</p>
 					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_test.png">
 					<div class="image-caption">Paper prototype testing with a bar owner</div>
 					<h3 class="h3-heading">Day 5 – Converge</h3>
@@ -58,11 +58,11 @@
 					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_converge.jpeg">
 					<div class="image-caption">Voting on design features to take to the next phase</div>
 					<h3 class="h3-heading">Day 6 – Prototype</h3>
-					<p>With most of the decisions made, we could focus on cranking out the prototype. The only thing left to desig at this point was the navigation model for the app, since we wanted the users to be able to use the app as they would in real life. We quickly put pen-to-paper to investigate possible options.</p>
+					<p>With most of the decisions made, we could focus on cranking out the prototype. The only thing left to design at this point was the navigation model for the app, since we wanted the users to be able to use the app as they would in real life. We quickly put pen-to-paper to investigate possible options.</p>
 					<img class="image--medium image--with-cation" src="/images/seek_desing_sprint_nav_model.png"> 
 					<div class="image-caption">Designing our nav model on paper</div>
 					<p>At this point, most of the team want to their day-to-day jobs, while one of my designer colleagues and I dove into prototyping the mobile application we needed to validate our idea with real users.</p>
-					<p>We designed in Sketch and prototpyed the applciation using <a class ="link link--on-light-bg link--inline" target="_blank" href="https://marvelapp.com/">Marvel</a>.</p>
+					<p>We designed in Sketch and prototpyed the application using <a class ="link link--on-light-bg link--inline" target="_blank" href="https://marvelapp.com/">Marvel</a>.</p>
 
 					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_prototype.png"> 
 					<div class="image-caption">One of the many sets of artobards in Sketch</div>
