--- a/usability_testing_with_kolektiv.html
+++ b/usability_testing_with_kolektiv.html
@@ -31,7 +31,7 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">The challenge</h2>
 
-					<p>Kolektiv grew organically from a small team of self-thought developers and entrepaneurs, into a company employing over 40 people. Along the way some common product development practices were skipped – it was time to bring some of those into their process.</p>
+					<p>Kolektiv grew organically from a small team of self thought developers and entrepaneurs, into a company employing over 40 people. Along the way some common product development practices were skipped – it was time to bring some of those into their process.</p>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Where to start?</h2>
