--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -31,8 +31,8 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">The challenge</h2>
 
-					<p>Gym receptions are busy places. Multiple instructors are meeting their students, loud music is playing, phones are ringing…</p> 
-					<p>GymSales wanted to provide gym visitors with a quick and painless way to register as visitors, while meeting gyms‘ data and legal requirements. Therein lied the biggest challenge for the project: how to collect all the data required, while keeping the process of registering quick and simple?</p>
+					<p>Gym receptions are busy places. Multiple instructors are meeting their students, loud music is playing, phones are ringing.</p> 
+					<p>GymSales wanted to provide gym visitors with a quick and painless way to register as visitors, while meeting gyms’ data and legal requirements. Therein lied the biggest challenge for the project: how to collect all the data required, while keeping the process of registering quick and simple?</p>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Research</h2>
@@ -41,14 +41,14 @@
 					<ul class="list">
 						<li class="list__item">They all used paper forms</li>
 						<li class="list__item">The forms often did not allow enough space for the required information</li>
-						<li class="list__item">The space allocated to completion of forms was inadequate and uncomforable</li>
-						<li class="list__item">The amount of information asked for was overwhelming. </li>
+						<li class="list__item">The space allocated to completion of forms was inadequate</li>
+						<li class="list__item">The amount of information asked for was overwhelming</li>
 					</ul>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Simplify from the start</h2>
 
-					<p>Before starting any design, I talked to the client about minimising the amount of inofmation we collect.</p>
+					<p>Before starting to design, I talked to the client about minimising the amount of inofmation we collect.</p>
 					<p>The principle we ended up agreeing on is that if the information was not required during the 'visitor' period, we did not need to collect it with this app. Any information that was required for full members would be collected once (if) they signed up as full members.</p>
 			</div>
 			<div class="sub-section__content">
@@ -64,7 +64,7 @@
 					
 					<div class="sub-section__content sub-section__content--no-margins">
 						<h3 class="h3-heading">Object origin</h3>
-						<p>Objects don’t just appear on the screen. They have a point of origin, and a destination so that they can enter and leave the screen in an orchestrated manner.</p>
+						<p>Objects don’t just appear on the screen. They have a point of origin, and a destination. This allows them to enter and leave the screen in an orchestrated manner.</p>
 						<img class="animation-example" src="/images/elements_appearing.gif">
 					</div>
 					<div class="sub-section__content sub-section__content--no-margins">
@@ -88,7 +88,7 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Usability testing</h2>
 
-					<p>I improvised in order to recruit subjects for my usability testing – I reached out to friends and acquaintances who joined a gym within the last year. I managed to find four people very quickly and tested the app prototype.</p>
+					<p>I improvised in order to recruit subjects for my usability testing – I reached out to friends and acquaintances who joined a gym within the last year. I managed to find three people very quickly and tested the app prototype.</p>
 					<p>The key change made after the usability testing was to provide explanation as to why the phone number was needed – some people were uncomfortable with providing this information.</p>
 			</div>
 			<div class="sub-section__content">
