--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -45,7 +45,7 @@
 				<div class="my-work-item__description--ipad">
 				<h2 class="h2-heading h2-heading__with-ipad--side-by-side">Visitor registration app</h2>
 				<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
-				<p>The app has beend deployed to over a thousand gyms across the US.</p>
+				<p>The app has been deployed to over a thousand gyms across the US.</p>
 				<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
 				</div>
 			</div>
@@ -58,7 +58,7 @@
 
 					<div class="my-work-item__description">
 					<p>During a week long design sprint, we designed, tested and validated a product idea for an increasingly important market segment for SEEK.</p>
-					<p>The output of the design sprint allowed SEEK to further validate the product idea, and eventually create a spin-off company, JoraLocal, to take the product to market.</p>
+					<p>The output of the design sprint allowed SEEK to further validate the product, and eventually create a spin-off company, JoraLocal, to take the product to market.</p>
 					<p><a class ="link link--on-light-bg" href="seek_design_sprint.html">Read case study</a></p>
 					</div>
 
@@ -73,8 +73,8 @@
 			<div id="WorkshopFacilitationAndWireframeDesign" class="my-work-item my-work-item_full-width-image--rubicon">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
-					<p class="text--on-dark-bg">I ran a two day design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
-					<p class="text--on-dark-bg">As a result, both the clients and the dev team were involved in the design process and everyone had a clear idea on how to proceed with the implementation.</p>
+					<p class="text--on-dark-bg">I ran a two day design workshop for a development company in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
+					<p class="text--on-dark-bg">As a result, both the clients and the development team were involved in the design process and had a clear idea on how to proceed with the implementation.</p>
 					<p><a class ="link link--on-dark-bg" href="design_workshop_facilitation_with_rubicon.html">Read case study</a></p>
 				</div>				
 			</div>
@@ -132,7 +132,7 @@
 
 					<div class="my-work-item__description">
 					<p>GymSales’ settings page had become unwieldy and difficult to navigate. It was hard to add new content in a logical way.</p>
-					<p>My re-design allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
+					<p>My redesign allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
 					<p><a class ="link link--on-light-bg" href="gymsales_settings_page.html">Read case study</a></p>
 					</div>
 
@@ -147,7 +147,7 @@
 					<h2 class="h2-heading">Side projects</h2>
 
 					<div class="my-work-item__description">
-					<p>Here are some side projects I worked on in my spare time. I do these things out of love for design and desire for constant learning, and because it beats watching TV.</p>
+					<p>Here are some side projects I worked on in my spare time. I do these things out of love for design and desire for constant learning. And because it beats watching TV.</p>
 					<p>Looking back at some of these makes me cringe, but I can’t hide from the things I’ve done – they all make me the designer I am today.</p>
 					</div>					
 
