--- a/about_vedran.html
+++ b/about_vedran.html
@@ -72,6 +72,7 @@
 				<p>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
