--- a/about_vedran.html
+++ b/about_vedran.html
@@ -52,12 +52,12 @@
 
 					<p>I love pushing pixels, it suits my detail oriented side. I can lose myself in Sketch for hours, but I never lose sight of the bigger picture, the audience I’m designing for and the business whose objectives I’m helping meet.</p>
 
-					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/presentations">other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@ThatBaldUXGuy">write</a> about design.</p>
+					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/vedranio/presentations">other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@vedranio">write</a> about design.</p>
 			</div>
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">About this site</h2>
 
-					<p>This site was designed, and entirely coded by me. No templates and no Bootstrap. You can see the source code at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://github.com/ThatBaldUXGuy/ThatBaldUXGuy.github.io">my GitHub account</a>.</p>
+					<p>This site was designed, and entirely coded by me. No templates and no Bootstrap. You can see the source code at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://github.com/vedranio/vedranio.github.io">my GitHub account</a>.</p>
 			</div>
 		</div>
 		<img class="image--full-width" src="/images/family.JPG" alt="Vedran's family"/>
@@ -70,10 +70,10 @@
 		<div class="footer section--dark footer__content">
 			<div class="section__content">
 				<p>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
