--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="section__content">
 				<h2 class="h2-heading">Writing</h2>
 					<p class="paragraph__home">Writing about design is a big part of my self development. It helps me improve by questioning my own beliefs, sharing knowledge and creating dialog.</p>
-				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Read my posts on Medium</a>
+				<a class ="link link--on-light-bg" href="http://medium.com/@vedranio" target="b">Read my posts on Medium</a>
 			</div>
 		</div>
 		<!-- DESIGN COMMUNITY -->
@@ -53,7 +53,7 @@
 			<div class="section__content">
 				<h2 class="h2-heading">Design community</h2>
 					<p class="paragraph__home">I am actively involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ process.</p>
-				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">Browse my presentations</a>
+				<a class ="link link--on-light-bg" href="http://www.slideshare.net/vedranio/presentations" target="_blank">Browse my presentations</a>
 			</div>
 		</div>
 
@@ -65,10 +65,10 @@
 		<div class="footer section--dark footer__content">
 			<div class="section__content ">
 				<p>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
