--- a/seek_credit_card_form_redesign.html
+++ b/seek_credit_card_form_redesign.html
@@ -191,10 +191,10 @@
 		<div class="footer section--dark footer__content">
 			<div class="section__content section__content--allow-wide">
 				<p>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
