--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -25,7 +25,7 @@
 				<h1 class="h1-heading">My work</h1>
 					<p>Design has more in common with science and engineering than art. Art is subjective, design is not. Therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
 					<p>Here is a selection of my work, focusing on my design and thought process, rather than just the finished products.</p>
-					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" target="_blank" href="mailto:vedran.arnautovic@gmail.com">email me</a> or connect via <a class ="link link--on-light-bg link--inline" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>.</p>
+					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" target="_blank" href="mailto:vedran.arnautovic@gmail.com">email me</a> or connect via <a class ="link link--on-light-bg link--inline" href="https://twitter.com/vedranio">Twitter</a>.</p>
 
 
 			</div>
@@ -191,10 +191,10 @@
 		<div class="footer section--dark footer__content">
 			<div class="section__content section__content--allow-wide">
 				<p>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@ThatBaldUXGuy">Medium</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/ThatBaldUXGuy">GitHub</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<a class ="link link--on-dark-bg link__footer" href="mailto:vedran.arnautovic@gmail.com">Email</a>
 				</p>
